feat: remove instructions and hyperdev

--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testing Prototype</title>
-    <meta name="description" content="A cool thing made with HyperDev">
-    <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
+    <title>Quality Assurance with Chai | freeCodeCamp.org</title>
+    <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,7 @@
   <body>
     <header>
       <h1>
-        FCC - QA &amp; Automated Testing
+        Automated Testing
       </h1>
     </header>
     <main>
