chore: update functional tests for chai-http and Zombie.js
Refactor functional tests for chai-http and Zombie.js to update the code syntax and improve readability. Replace single quotes with double quotes for consistency. Update test descriptions to use double quotes instead of single quotes. Fix failing assertions in tests. Add missing test cases for submitting surnames in the HTML form.

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Quality Assurance with Chai | freeCodeCamp.org</title>
     <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
